# sp3

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
.github/workflows/: daily.yml  release.yml  rust.yml
src/: anise.rs  bibliography.rs  constants.rs  dynamics.rs  entry.rs  errors.rs  formatting.rs  lib.rs  nyx.rs  parsing.rs  position.rs  production.rs  velocity.rs
src/header/: line1.rs  line2.rs  mod.rs  version.rs
src/processing/: decimation.rs  masking.rs  mod.rs  split.rs  substract.rs  timeshift.rs
src/production/: availability.rs  campaign.rs  date.rs  mod.rs  period.rs
src/qc/: merge.rs  mod.rs  preprocessing.rs  repair.rs  rework.rs  split.rs
src/tests/: formatting.rs  interpolation.rs  maneuver.rs  merge.rs  mod.rs  parser_3c.rs  parser_3d.rs  substract.rs  test_pool.rs
tests/: test_formatter.py  test_parser.py
