[package]
name = "sp3"
version = "1.1.2"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "IGS SP3 file parser"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/sp3"
documentation = "https://docs.rs/sp3/"
keywords = ["gnss", "timing", "gps", "geo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
default = ["flate2"] # gzip files by default

# File Merging and other high level methods
qc = [
    "gnss-qc-traits",
]

# (Pre)Processing methods like data masking 
processing = [
    "qc",
    "gnss-qc-traits/processing",
]

[dependencies]
thiserror = "2"
itertools = "0.14"

hifitime = { git = "https://github.com/nyx-space/hifitime", branch = "master", features = ["serde", "std"] }
anise = { git = "https://github.com/nyx-space/anise", branch = "dep/hifitime-github", optional = true }

gnss-rs = { git = "https://github.com/rtk-rs/gnss", branch = "dep/hifitime", features = ["serde"] }
gnss-qc-traits = { git = "https://github.com/rtk-rs/qc-traits", branch = "dep/hifitime", optional = true }

flate2 = { version = "1", optional = true, default-features = false, features = ["zlib"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
