[package]
name = "sp3"
version = "1.4.1"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "IGS SP3 file parser"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/sp3"
documentation = "https://docs.rs/sp3/"
keywords = ["gnss", "timing", "gps", "geo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
default = ["flate2"] # gzip files by default

# File Merging and other high level methods
qc = [
    "gnss-qc-traits",
]

# (Pre)Processing methods like data masking 
processing = [
    "qc",
    "gnss-qc-traits/processing",
]

# Unlock Nyx/ANISE features
anise = [
    "dep:anise",
]

# Unlock Nyx propagators for SP3 prediction.
# Modifies the license to AGPLv3.
nyx-space = [
    "dep:log",
    "anise",
    "dep:nyx-space",
]   

# Unlock python bindings
python = [
    "dep:pyo3",
    "gnss-rs/python",
    "gnss-rs/std",
    "anise/python",
    "hifitime/python",
]

[dependencies.gnss-rs]
git = "https://github.com/nav-solutions/gnss"
rev = "af691cfe4c22b4b9c952a899f6df3c77453c9c34"
features = ["serde"]

[dependencies.gnss-qc-traits]
git = "https://github.com/nav-solutions/qc-traits"
rev = "3ca98d3766bb9a468994be469abeade4a920e2d1"
optional = true

[dependencies]
thiserror = "2"
itertools = "0.14"
log = { version = "0.4", optional = true }
anise = { version = "0.8", optional = true }
hifitime = { version = "4", features = ["serde", "std"] }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
nyx-space = { git = "https://github.com/nyx-space/nyx", rev = "57c6d75345553182a731df4c2f2ecb32a5815cdb", optional = true }

flate2 = { version = "1", optional = true, default-features = false, features = ["zlib"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
env_logger = "0.11"
anise = { version = "0.8", features = ["embed_ephem"] }
